# LogViewer

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
source/: main.cpp
